@@ -1,1 +1,2 @@
 DIST admin-tools-0.21.tar.xz 9260 SHA256 23c28e9f09e83bd04b616f02b1618a80c67fea94e8a17b9ea9b999625b022702 SHA512 cd1c16c4432028949f2689476823ec8f13dab12e9cc72a2b4f4e426574198aea0a3424ed1e4e1919339aefe5af5b4294a961dd9c79c2f2239d93177d9fb91c7c WHIRLPOOL 600c1f241d9b4bcf2ace1f64d1c85cb84f63c8ab6663a451540645b3f4a6d2dd535e9759c6ab181a870fc0a7dda6959e4e7e845c15f6ebca77d355ea372f057b
+DIST admin-tools-0.22.tar.gz 9813 SHA256 0f0fee0c2118f97c14e5db307c18266d0e76a72a1a430f1fba7338c7a12c0862 SHA512 72f9b83167cc01104f83c92b20072e877b93ebcbba5d30d0ec05749c618294617bfd7bd46e15564ac6f517fcd73612346257313739c48fcf0331401b5a365de6 WHIRLPOOL 94b97c616cac5be4b2f6d697f2c7f197546c65e7eaf21bd557bbfd8f9eaf937aa29011e8d6691e82b610b4c2692a728fd05f56c4951ea813576b4b53c466e641
