@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*admin-tools-0.22 (05 Apr 2015)
+
+  05 Apr 2015; Johann Schmitz <ercpe@gentoo.org> +admin-tools-0.22.ebuild:
+  Version bump to include lastest changes to adduse.py
+
   05 Apr 2015; Johann Schmitz <ercpe@gentoo.org> admin-tools-0.21-r1.ebuild:
   Stable
 
